fix: image editor grid alignment

--- a/web-page/frontend/src/components/image-editor/image-editor.scss
+++ b/web-page/frontend/src/components/image-editor/image-editor.scss
@@ -1,22 +1,32 @@
 // editor stack
 .editor-stack {
-    display: flex;
-    flex-direction: column;
-    max-width:100%;
     height:auto;
+    width:auto;
+    max-width:100%;
     max-height:100%;
+    min-width:200px;
     margin:0;
 }
 
-// undo-box
-.history-box{
-    display: flex;
+// undo/redo box
+.history-buttons{
+    display:flex;
+    justify-content:flex-start;
+    align-items:end;
+}
+
+// download and preview
+.download-preview-buttons{
+    display:flex;
+    justify-content:flex-end;
+    align-items:end;
+}
+
+.editor-button-group{
     height:auto;
-    width:15%;
-    min-width:90px;
+    width:auto;
+    min-width:0px;
     max-width:150px;
-    margin-right:0%;
-    margin-left:auto;
 }
 
 .history-button{
@@ -24,14 +34,20 @@
     flex:1;
 }
 
+.image-grid{
+    display:flex;
+    max-height:100%;
+    width:auto;
+}
+
 // image container
 .image-box {
     position: relative;
     display: flex;
-    flex-direction: column;
-    width:100%;
-    height:100%;
+    max-width: 100%;
+    max-height:100%;
     height:auto;
+    width:auto;
     margin:auto;
     position: relative;
     border: 2px solid gray;
@@ -41,7 +57,6 @@
 .image-box img {
     max-height: 100%;
     max-width: 100%;
-    display: block;
 }
 // layer image
 .mask-img {
